--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@ body {
   flex-grow: 1;
   flex-direction: column;
   align-items: center;
+  padding: 0 1rem;
   font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -11,7 +12,8 @@ body {
   flex-direction: column;
 }
 @media all and (min-width: 64rem) {
-  .form {
+  .form,
+  .results {
     width: 50rem;
   }
 }
@@ -30,4 +32,26 @@ body {
 }
 .form__fields li + li {
   margin-left: 1rem;
+}
+
+.repos {
+  padding-left: 0;
+  list-style: none;
+}
+
+.repo {
+  display: flex;
+  flex-direction: column;
+  padding: 0.75rem 0;
+  border-bottom: 0.0625rem solid lightgrey;
+}
+
+.repo__name {
+  flex-grow: 1;
+}
+
+@media all and (min-width: 64rem) {
+  .repo {
+    flex-direction: row;
+  }
 }
